Improved benchmark outputs and cleaned up code slightly

--- a/p3p/lambdatwist/.vscode/settings.json
+++ b/p3p/lambdatwist/.vscode/settings.json
@@ -51,6 +51,8 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "core": "cpp"
+        "core": "cpp",
+        "random": "cpp",
+        "numeric": "cpp"
     }
 }
